# mlops-laps

./: README.md  dockerfile  dvc.yaml  dvc_creation.sh  params.yaml  pyproject.toml  server.py
.dvc/: config
conf/: config.yaml
notebooks/: test.ipynb
outputs/2025-05-17/15-12-08/.hydra/: hydra.yaml
outputs/2025-05-17/15-13-09/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-17/15-15-57/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-17/15-21-12/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-17/15-24-44/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-17/15-29-59/.hydra/: hydra.yaml
outputs/2025-05-17/15-32-42/.hydra/: hydra.yaml
outputs/2025-05-17/18-32-30/.hydra/: hydra.yaml
outputs/2025-05-17/18-32-32/.hydra/: hydra.yaml
outputs/2025-05-17/18-39-14/.hydra/: hydra.yaml
outputs/2025-05-17/18-39-23/.hydra/: hydra.yaml
outputs/2025-05-17/18-51-25/.hydra/: hydra.yaml
outputs/2025-05-17/18-51-27/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-17/19-02-16/.hydra/: hydra.yaml
outputs/2025-05-17/19-02-18/.hydra/: hydra.yaml
outputs/2025-05-17/19-14-00/.hydra/: hydra.yaml
outputs/2025-05-17/19-14-01/.hydra/: hydra.yaml
outputs/2025-05-19/07-01-18/.hydra/: hydra.yaml
outputs/2025-05-19/07-08-37/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-19/07-13-33/.hydra/: hydra.yaml
reports/: metrics.json
src/: evaluate.py  main.py
src/data/: preprocess_data.py
src/deployment/: api.py  requests.py
src/model/: .gitignore  full_pipeline_model.pkl  model.pkl  model_only.pkl  tracking.py  train_model.py
(+2 files in other folders)
