[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops"
version = "0.0.1"
description = "nothing"
authors = [
  { name = "Hendeya" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "pandas>=2.2.3",
    "scikit-learn>=1.0.0",
    "litserve>=0.1.0",
    "pydantic>=2.0.0",
    "hydra-core>=1.0.0",
    "python-dotenv>=1.0.0",
    "mlflow>=2.0.0",
    "lightning>=2.0.0",
]
requires-python = "~=3.10.10"


[tool.ruff]
line-length = 99
src = ["mlops"]
include = ["pyproject.toml", "mlops/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mlops"]
force-sort-within-sections = true

